--- a/src/Components/Header/Navbar.css
+++ b/src/Components/Header/Navbar.css
@@ -1,3 +1,15 @@
-.myclass a .active{
+.myclass{
+    border-bottom: 3px solid transparent;
+}
+.myclass:hover{
+    border-bottom: 3px solid crimson;
+}
+.myclass a.active{
     color: #DC143C;
+    border-bottom: 3px solid crimson;
+}
+
+.mynewclass a.active{
+    color: white;
+    background-color: #DC143C;
 }
